更新 CMakeLists.txt，提升编译器版本，添加 Boost 和 TBB 的详细信息，优化目标链接和包含目录设置

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,30 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 4.0)
 project(ycsbc
     VERSION 1.0
     LANGUAGES CXX
 )
 
-# 设置编译器选项
+set(HOME_DIR $ENV{HOME})
+message(STATUS "HOME_DIR = ${HOME_DIR}")
+
+set(CMAKE_C_COMPILER "${HOME_DIR}/gcc/bin/gcc")
+if(EXISTS "${HOME_DIR}/gcc/bin/g++")
+    set(CMAKE_CXX_COMPILER "${HOME_DIR}/gcc/bin/g++")
+else()
+    message(FATAL_ERROR "Custom g++ not found at ${HOME_DIR}/gcc/bin/g++")
+endif()
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# 全局编译选项
+message(STATUS "Using C++ standard: ${CMAKE_CXX_STANDARD}")
+
 add_compile_options(
     -g
     -Wall
     -Wextra
-    -Wpedantic
     -Werror
-    -pthread
 )
 
 # 包含目录设置
@@ -28,14 +36,37 @@ include_directories(
 )
 
 cmake_policy(SET CMP0167 NEW)
-# 查找依赖项
+
+set(BOOST_ROOT "${HOME_DIR}/lib/boost")
+set(Boost_NO_SYSTEM_PATHS ON)
 find_package(Boost REQUIRED COMPONENTS system)
+if(Boost_FOUND)
+    message(STATUS "Boost found: ${Boost_VERSION}")
+    message(STATUS "Boost include dir: ${Boost_INCLUDE_DIRS}")
+    message(STATUS "Boost libraries: ${Boost_LIBRARIES}")
+endif()
+
 find_package(TBB REQUIRED)
+if(TBB_FOUND)
+    message(STATUS "TBB found: ${TBB_VERSION}")
+    message(STATUS "TBB include dir: ${TBB_INCLUDE_DIRS}")
+    message(STATUS "TBB libraries: ${TBB_LIBRARIES}")
+endif()
+
 find_package(Threads REQUIRED)
+if(Threads_FOUND)
+    message(STATUS "Threads library: ${CMAKE_THREAD_LIBS_INIT}")
+endif()
+
 find_package(PkgConfig REQUIRED)
 
+set(DPDK_PATH ${HOME_DIR}/lib/dpdk)
+set(DPDK_LIB_DIR "${DPDK_PATH}/lib/x86_64-linux-gnu")
+set(ENV{PKG_CONFIG_PATH} "${DPDK_LIB_DIR}/pkgconfig:$ENV{PKG_CONFIG_PATH}")
+find_package(PkgConfig REQUIRED)
 pkg_check_modules(DPDK REQUIRED libdpdk)
-message(STATUS "DPDK_INCLUDE_DIRS: ${DPDK_INCLUDE_DIRS}")
+message(STATUS "DPDK_INCLUDE_DIRS: ${DPDK_PATH}/include")
+message(STATUS "DPDK_LIBRARY_DIRS: ${DPDK_LIBRARY_DIRS}")
 message(STATUS "DPDK_LIBRARIES: ${DPDK_LIBRARIES}")
 
 file(GLOB_RECURSE SOURCE_FILES
@@ -47,24 +78,31 @@ file(GLOB_RECURSE SOURCE_FILES
 
 set(TARGET_NAME ycsbc)
 
-# 生成可执行文件
 add_executable(${TARGET_NAME} ${SOURCE_FILES})
 
-# 链接配置
+target_include_directories(${TARGET_NAME}
+    PUBLIC
+        ${BOOST_ROOT}/include
+        ${DPDK_PATH}/include
+)
+
+target_link_directories(${TARGET_NAME}
+    PUBLIC
+        ${DPDK_LIB_DIR}
+)
+
 target_link_libraries(${TARGET_NAME}
-    PRIVATE
+    PUBLIC
         Boost::system
         TBB::tbb
         Threads::Threads
         ${DPDK_LIBRARIES}
 )
 
-target_include_directories(${TARGET_NAME}
-    PRIVATE
-        ${DPDK_INCLUDE_DIRS}
+target_compile_options(${TARGET_NAME}
+    PUBLIC
+        ${DPDK_CFLAGS_OTHER}
 )
-
-target_compile_options(${TARGET_NAME} PUBLIC ${DPDK_CFLAGS_OTHER})
 
 file(GLOB_RECURSE WORKLOADS "${CMAKE_SOURCE_DIR}/workloads/*")
 
@@ -80,11 +118,9 @@ foreach(conf_file ${CONF_FILES})
     configure_file(${conf_file} ${CMAKE_CURRENT_BINARY_DIR}/conf/${conf_name} COPYONLY)
 endforeach()
 
-# 安装规则
 install(
     TARGETS ${TARGET_NAME}
     RUNTIME DESTINATION bin
 )
 
-# 清理辅助配置
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY CLEAN_NO_CUSTOM 1)
