--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,7 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "queue": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "shared_mutex": "cpp"
     }
 }
