强化RequestMap类模板性

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,8 +49,8 @@ else()
 endif()
 
 if(EXISTS "${HOME_DIR}/lib/tbb")
-    set(BOOST_ROOT "${HOME_DIR}/lib/tbb")
-    set(Boost_NO_SYSTEM_PATHS ON)
+    set(TBB_ROOT "${HOME_DIR}/lib/tbb")
+    set(TBB_NO_SYSTEM_PATHS ON)
 endif()
 find_package(TBB REQUIRED)
 if(TBB_FOUND)
